lbdb (0.25) unstable; urgency=low

  * Suggest mutt-ja as an alternative to mutt, because mutt-ja currently
    does not provide mutt (Closes: #85923).
  * Add m_ldap and mutt_ldap_query provided by Marc de Courville,
    <marc@courville.org>.
  * lbdb-munge didn't honor SORT_OUTPUT when called from m_inmail, so
    export this variable in m_inmail (Closes: #92767).
  * Module m_nispasswd added by Utz-Uwe Haus <haus@uuhaus.de>.
  * Added variable MAIL_DOMAIN_NAME to override other settings of mail
    domain.

 -- Roland Rosenfeld <roland@debian.org>  Tue, 10 Apr 2001 19:12:51 +0200

lbdb (0.24) unstable; urgency=low

  * Add new module m_bbdb to access a (X)Emacs big brother database (bbdb)
    from lbdb using (x)emacs as the backend.  Thanks to Utz-Uwe Haus
    <haus@uuhaus.de> for providing this.
  * s/MODULE_PATH/MODULES_PATH/ in documentation to match the behavior of
    the program (Closes: #83933).
  * m_gpg: stop using --with-colons, because this outputs utf8 instead of
    your local charset, which causes problems with non 7bit characters
    (Closes: #83936).
  * Add a new variable KEEP_DUPES, which allows to see duplicate mail
    addresses (with different real names or comment fields) (Closes: #83908).

 -- Roland Rosenfeld <roland@debian.org>  Sat, 10 Feb 2001 17:57:54 +0100

lbdb (0.23) unstable; urgency=low

  * Add a second grep to m_pgp5 and m_gpg to remove UIDs, which don't
    match the search string, but are only generated, because a different
    UID of this key matches.
  * Add new module m_gnomecard based on an idea by Rick Frankel 
    <rick@rickster.com>.
  * Always use /bin/sh as the shell on Debian systems, because Debian
    guarantees, that /bin/sh is a posix shell (Closes: #75475).
  * Move /usr/share/doc/lbdb/override.Lintian to
    /usr/share/lintian/overrides/lbdb.
  * Add $(install_prefix) to Makefile.in and change debian/rules to use
    it.  Thanks to Rob Payne <rnspayne@adelphia.net> for providing the
    idea and a patch.